--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+python==3.7
 aiofiles==0.5.0
 aiohttp==3.7.4
 asyncio==3.4.3
@@ -15,7 +16,6 @@ itsdangerous==1.1.0
 MarkupSafe==1.1.1
 Werkzeug==0.15.5
 jinja2==2.10.1
-numpy>=1.9.2
 scipy>=0.15.1
 matplotlib>1.4.3
 pandas>0.19
